...
        android:textAppearance="@style/dialog_content"
        app:layout_constraintEnd_toEndOf="@+id/confirmTitle"
        app:layout_constraintStart_toStartOf="@+id/confirmTitle"
        app:layout_constraintTop_toBottomOf="@+id/confirmTitle" />

    <ImageButton
        android:id="@+id/confirmDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/confirm_yes"
        android:src="@drawable/ic_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancelDialog"
        app:layout_constraintTop_toTopOf="@+id/cancelDialog" />

    <ImageButton
        android:id="@+id/cancelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
