...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:listitem="@layout/transaction_card" />

    <ImageButton
        android:id="@+id/addTransaction"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="-24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/add_transaction"
        app:layout_constraintEnd_toEndOf="parent"
...
