...
        android:text="@string/value_field"
        android:textAppearance="@style/configuration_label"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/monitorValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_value"
        android:textAppearance="@style/monitor_value"
        app:layout_constraintEnd_toEndOf="@+id/monitorDate"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
...
