...
    <string name="greet">Hello %s</string>
    <string name="your_balance_is">Your balance is:</string>
    <string name="balance">%s</string>
    <string name="transaction_value">%s</string>
    <string name="transaction_date">%s</string>

    <string name="configuration">Configuration</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="filter_transaction">Filter Transactions</string>
    <string name="date_format">MM/dd/yyyy</string>

    <!-- Filter Transaction Strings -->
    <string name="filter_dialog">Pick a month to filter</string>
...
